--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demoweather-api
 spring.redis.host=localhost
 spring.redis.port=6379
-weather.api.key=2VPNBARFYHPH6FW3C3HP733XU
+weather.api.key=API_KEY
